[metadata]
name = yourmap
version = 0.0.1
author = Emanuel Miranda
author_email = emanuelmiranda.si@ufpi.edu.br
description = pacote para marcação de mapas
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/emanuel07mii/yourmap.git
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
[options]
package_dir =
 = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src